Fix for alignment issue on tax id filter

--- a/src/app/common-utils/filters-multi-select/filters-multi-select.component.scss
+++ b/src/app/common-utils/filters-multi-select/filters-multi-select.component.scss
@@ -33,7 +33,7 @@
       }
       .selected-items-container {
         mat-icon {
-          position: absolute;
+          position: relative;
         }
         width: calc(100% - 40px);
         display: block;
